<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <ScrollView
        android:id="@+id/controls_scroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:fillViewport="true" >
        <LinearLayout
            android:id="@+id/controls_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grayscale" >
            </TextView>
            <Spinner
                android:id="@+id/spinner_grayscale_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/grayscale_prompt" >
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_black" >
            </TextView>
            <Spinner
                android:id="@+id/spinner_near_black_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_white" >
            </TextView>
            <Spinner
                android:id="@+id/spinner_near_white_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturations" >
            </TextView>
            <Spinner
                android:id="@+id/spinner_saturation_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Spinner>
            <Button
                android:id="@+id/button_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_brightness" />
            <Button
                android:id="@+id/button_grayscale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_grayscale" >
            </Button>
            <Button
                android:id="@+id/button_near_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_near_black" >
            </Button>
            <Button
                android:id="@+id/button_near_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_near_white" >
            </Button>
            <Button
                android:id="@+id/button_colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_colors" >
            </Button>
            <Button
                android:id="@+id/button_saturations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_saturations" >
            </Button>
            <TextView
                android:id="@+id/current_pattern_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:text="@string/detailed_infos" >
            </TextView>
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/button_prev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prev" >
                </Button>
                <Button
                    android:id="@+id/button_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/next" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/pattern_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </View>
</LinearLayout>